# django-crud

./: .gitignore  manage.py  pyproject.toml  requirements.txt
Envoltoriza/: asgi.py  settings.py  urls.py  wsgi.py
static/js/: custom.js
static/templates/: about.html  contact.html  index.html  shop-single.html
store/: admin.py  models.py  urls.py  views.py
